Stopped zooming in on mobile when ingredient controls are double tapped.

--- a/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
+++ b/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
@@ -38,11 +38,13 @@
 .BuildControl .Less {  
   background-color: #D39952;
   color: white;
+  touch-action: manipulation;
 }
 
 .BuildControl .More {
   background-color: #8F5E1E;
   color: white;
+  touch-action: manipulation;
 }
 
 .BuildControl .Less:hover, .BuildControl .Less:active {  
